test/fail/integration/_fail_sem_decl_funct_3.hs
x :: Int
x y = 3
main = print "hello"